// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders the UI snapshot correctly 1`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="ds-checkboxGroup"
  id="column"
>
  <legend>
    column
  </legend>
  <div
    className="chakra-stack css-19s3t1h"
    data-testid="checkbox-group"
    id="column-stack"
  >
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="column-0-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="column-0"
          name="column"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="2"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 2
        </span>
      </label>
    </div>
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="column-1-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="column-1"
          name="column"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="3"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 3
        </span>
      </label>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="column-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</fieldset>
`;

exports[`Checkbox renders the UI snapshot correctly 2`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="ds-checkboxGroup"
  id="row"
>
  <legend>
    row
  </legend>
  <div
    className="chakra-stack css-1478f2b"
    data-testid="checkbox-group"
    id="row-stack"
  >
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="row-0-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="row-0"
          name="row"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="2"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 2
        </span>
      </label>
    </div>
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="row-1-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="row-1"
          name="row"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="3"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 3
        </span>
      </label>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="row-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</fieldset>
`;

exports[`Checkbox renders the UI snapshot correctly 3`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="ds-checkboxGroup"
  id="noLabel"
>
  <legend>
    no label
  </legend>
  <div
    className="chakra-stack css-19s3t1h"
    data-testid="checkbox-group"
    id="noLabel-stack"
  >
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="noLabel-0-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="noLabel-0"
          name="noLabel"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="2"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 2
        </span>
      </label>
    </div>
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="noLabel-1-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="noLabel-1"
          name="noLabel"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="3"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 3
        </span>
      </label>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="noLabel-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</fieldset>
`;

exports[`Checkbox renders the UI snapshot correctly 4`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="ds-checkboxGroup"
  id="helperText"
>
  <legend>
    helperText
  </legend>
  <div
    className="chakra-stack css-19s3t1h"
    data-testid="checkbox-group"
    id="helperText-stack"
  >
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="helperText-0-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="helperText-0"
          name="helperText"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="2"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 2
        </span>
      </label>
    </div>
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="helperText-1-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="helperText-1"
          name="helperText"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="3"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 3
        </span>
      </label>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="helperText-helperErrorText"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "helper text",
        }
      }
    />
  </div>
</fieldset>
`;

exports[`Checkbox renders the UI snapshot correctly 5`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="ds-checkboxGroup"
  id="invalidText"
>
  <legend>
    invalidText
  </legend>
  <div
    className="chakra-stack css-19s3t1h"
    data-testid="checkbox-group"
    id="invalidText-stack"
  >
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="invalidText-0-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="invalidText-0"
          name="invalidText"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="2"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 2
        </span>
      </label>
    </div>
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="invalidText-1-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="invalidText-1"
          name="invalidText"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="3"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 3
        </span>
      </label>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="invalidText-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</fieldset>
`;

exports[`Checkbox renders the UI snapshot correctly 6`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="ds-checkboxGroup"
  id="noRequiredLabel"
>
  <legend>
    no optional or required label
  </legend>
  <div
    className="chakra-stack css-19s3t1h"
    data-testid="checkbox-group"
    id="noRequiredLabel-stack"
  >
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="noRequiredLabel-0-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="noRequiredLabel-0"
          name="noRequiredLabel"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={true}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="2"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 2
        </span>
      </label>
    </div>
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="noRequiredLabel-1-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="noRequiredLabel-1"
          name="noRequiredLabel"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={true}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="3"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 3
        </span>
      </label>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="noRequiredLabel-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</fieldset>
`;

exports[`Checkbox renders the UI snapshot correctly 7`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="ds-checkboxGroup"
  id="required"
>
  <legend>
    required
    <span>
       (required)
    </span>
  </legend>
  <div
    className="chakra-stack css-19s3t1h"
    data-testid="checkbox-group"
    id="required-stack"
  >
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="required-0-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="required-0"
          name="required"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={true}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="2"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 2
        </span>
      </label>
    </div>
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="required-1-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="required-1"
          name="required"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={true}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="3"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 3
        </span>
      </label>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="required-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</fieldset>
`;

exports[`Checkbox renders the UI snapshot correctly 8`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="ds-checkboxGroup"
  id="invalid"
>
  <legend>
    invalid
  </legend>
  <div
    className="chakra-stack css-19s3t1h"
    data-testid="checkbox-group"
    id="invalid-stack"
  >
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="invalid-0-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        data-invalid=""
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={true}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="invalid-0"
          name="invalid"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="2"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          data-invalid=""
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          data-invalid=""
          onMouseDown={[Function]}
        >
          Checkbox 2
        </span>
      </label>
    </div>
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="invalid-1-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        data-invalid=""
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={true}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="invalid-1"
          name="invalid"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="3"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          data-invalid=""
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          data-invalid=""
          onMouseDown={[Function]}
        >
          Checkbox 3
        </span>
      </label>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={true}
    id="invalid-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</fieldset>
`;

exports[`Checkbox renders the UI snapshot correctly 9`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="ds-checkboxGroup"
  id="disabled"
>
  <legend>
    disabled
  </legend>
  <div
    className="chakra-stack css-19s3t1h"
    data-testid="checkbox-group"
    id="disabled-stack"
  >
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="disabled-0-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        data-disabled=""
        onClick={[Function]}
      >
        <input
          aria-disabled={true}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={true}
          id="disabled-0"
          name="disabled"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="2"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          data-disabled=""
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          data-disabled=""
          onMouseDown={[Function]}
        >
          Checkbox 2
        </span>
      </label>
    </div>
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="disabled-1-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        data-disabled=""
        onClick={[Function]}
      >
        <input
          aria-disabled={true}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={true}
          id="disabled-1"
          name="disabled"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="3"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          data-disabled=""
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          data-disabled=""
          onMouseDown={[Function]}
        >
          Checkbox 3
        </span>
      </label>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="disabled-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</fieldset>
`;

exports[`Checkbox renders the UI snapshot correctly 10`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="ds-checkboxGroup"
  id="jsxLabels"
>
  <legend>
    jsxLabels
  </legend>
  <div
    className="chakra-stack css-19s3t1h"
    data-testid="checkbox-group"
    id="jsxLabels-stack"
  >
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="jsxLabels-0-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="jsxLabels-0"
          name="jsxLabels"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="arts"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          <div
            className="css-k008qs"
          >
            <span>
              Arts
            </span>
            <div
              className="css-17xejub"
            />
            <span>
              4
            </span>
          </div>
        </span>
      </label>
    </div>
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="jsxLabels-1-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="jsxLabels-1"
          name="jsxLabels"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="English"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          <div
            className="css-k008qs"
          >
            <span>
              English
            </span>
            <div
              className="css-17xejub"
            />
            <span>
              23
            </span>
          </div>
        </span>
      </label>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="jsxLabels-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</fieldset>
`;

exports[`Checkbox renders the UI snapshot correctly 11`] = `
<fieldset
  className="css-2bbtg1"
  data-testid="ds-checkboxGroup"
  id="chakraProps"
>
  <legend>
    chakraProps
  </legend>
  <div
    className="chakra-stack css-19s3t1h"
    data-testid="checkbox-group"
    id="chakraProps-stack"
  >
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="chakraProps-0-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="chakraProps-0"
          name="chakraProps"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="2"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 2
        </span>
      </label>
    </div>
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="chakraProps-1-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="chakraProps-1"
          name="chakraProps"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="3"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 3
        </span>
      </label>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="chakraProps-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</fieldset>
`;

exports[`Checkbox renders the UI snapshot correctly 12`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="props"
  id="otherProps"
>
  <legend>
    otherProps
  </legend>
  <div
    className="chakra-stack css-19s3t1h"
    data-testid="checkbox-group"
    id="otherProps-stack"
  >
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="otherProps-0-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="otherProps-0"
          name="otherProps"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="2"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 2
        </span>
      </label>
    </div>
    <div
      className="css-1xdhyk6"
      data-testid="ds-checkbox"
      id="otherProps-1-componentWrapper"
    >
      <label
        className="chakra-checkbox css-1xdhyk6"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="otherProps-1"
          name="otherProps"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="3"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 3
        </span>
      </label>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="otherProps-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</fieldset>
`;
